--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-scroll": "^1.9.0",
+    "rollup": "^4.24.3",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14"
   },
